--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -327,3 +327,7 @@ $multiple-item-space: 3px !default
 // ==========================================================================
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
+
+// No custom list
+// ==========================================================================
+$no-custom-list: ':not(.reset-list):not(.no-custom):not(.breadcrumbs__list):not(.slick-dots)'
