--- a/src/sass/forms/_selects.sass
+++ b/src/sass/forms/_selects.sass
@@ -9,97 +9,114 @@
 		width: 100%
 
 .#{$user-content}, .select, .#{$user-content} .select
-	select
-		+selectSelection
-		display: block
-		position: relative
-		overflow: hidden
-		text-overflow: ''
-		cursor: pointer
-		white-space: nowrap
+  select
+    +selectSelection
+    display: block
+    position: relative
+    overflow: hidden
+    text-overflow: ''
+    cursor: pointer
+    white-space: nowrap
 
-		// Стили для текста полей ввода прописываем отдельно через миксин,
-		// чтобы была возможность добавить медиа развилки через тот же миксин
-		&
-			+selects-font
+    // Стили для текста полей ввода прописываем отдельно через миксин,
+    // чтобы была возможность добавить медиа развилки через тот же миксин
+    &
+      +selects-font
 
 .#{$user-content} select
-	padding-right: 0
+  padding-right: 0
 
 .#{$user-content} select, .select
-	+forms-space
+  +forms-space
 
-	&:last-child
-		margin-bottom: 0
+  &:last-child
+    margin-bottom: 0
 
 .input-wrap
-	select, .select
-		margin-bottom: 0
+  select, .select
+    margin-bottom: 0
 
 // Select with a custom arrow
 .select
-	position: relative
+  position: relative
 
-	select
-		padding-right: 40px
+  &::before, &::after
+    content: ''
+    position: absolute
+    right: 22px
+    top: 50%
+    +size(8px, 2px)
+    background-color: $text-color
+    margin-top: -1px
+    z-index: 1
+
+  &::before
+    transform: rotate(45deg)
+
+  &::after
+    transform: rotate(-45deg)
+    right: 17px
+
+  select
+    padding-right: 40px
 
 // States
 .#{$user-content} select, .select
 
-	&[disabled]
-		cursor: default
-		color: $form-text-color--disabled
-		background-color: $form-bg-color--disabled
-		border-color: $form-border-color--disabled
+  &[disabled]
+    cursor: default
+    color: $form-text-color--disabled
+    background-color: $form-bg-color--disabled
+    border-color: $form-border-color--disabled
 
-		+placeholder
-			color: $form-text-color--disabled
+    +placeholder
+      color: $form-text-color--disabled
 
-	&:not([disabled]):not(.error):not(.success):not(.input--has-value)
-		//form hover
-		&:hover
-			border-color: $form-border-color--focus
+  &:not([disabled]):not(.error):not(.success):not(.input--has-value)
+    //form hover
+    &:hover
+      border-color: $form-border-color--focus
 
-		//form focus
-		&:focus
-			border-color: $form-border-color--focus
+    //form focus
+    &:focus
+      border-color: $form-border-color--focus
 
-	// has value (js)
-	//style for label
-	@at-root label
-		&.input--has-value
-			+form-has-value
+  // has value (js)
+  //style for label
+  @at-root label
+    &.input--has-value
+      +form-has-value
 
-	&.input--has-value:not([disabled])
-		+form-has-value
+  &.input--has-value:not([disabled])
+    +form-has-value
 
-	// on focus (js)
-	//&.input--focus
-		+form-on-focus
+  // on focus (js)
+  //&.input--focus
+    +form-on-focus
 
-	//form success
-	//style for label
-	@at-root label
-		&.success
-			+form-success
+  //form success
+  //style for label
+  @at-root label
+    &.success
+      +form-success
 
-	&.success:not([disabled])
-		+form-success
+  &.success:not([disabled])
+    +form-success
 
-		//form success placeholder
-		+placeholder
-			color: $form-success-color
+    //form success placeholder
+    +placeholder
+      color: $form-success-color
 
-	//form error
-	@at-root label
-		&.error
-			+form-error
+  //form error
+  @at-root label
+    &.error
+      +form-error
 
-	&.error:not([disabled])
-		+form-error
+  &.error:not([disabled])
+    +form-error
 
-		//form error placeholder
-		+placeholder
-			color: $form-error-color
+    //form error placeholder
+    +placeholder
+      color: $form-error-color
 
 /* select end
