--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -17,36 +17,36 @@ $font-alt: Georgia, serif !default
 // Reset font-weight and font-style
 // Use for font-face
 =font-reset()
-	font:
-		weight: normal
-		style: normal
+  font:
+    weight: normal
+    style: normal
 
 // Main font
 =font-normal()
-	font-family: $font-norm
+  font-family: $font-norm
 
 =font-bold()
-	font-weight: bold
+  font-weight: bold
 
 =font-italic()
-	font-style: italic
+  font-style: italic
 
 =font-bold-italic()
-	font-weight: bold
-	font-style: italic
+  font-weight: bold
+  font-style: italic
 
 // Alternative font
 =font-alt()
-	font-family: $font-alt
+  font-family: $font-alt
 
 =font-alt-bold()
-	font-family: $font-alt
-	font-weight: bold
+  font-family: $font-alt
+  font-weight: bold
 
 =font-alt-bold-italic()
-	font-family: $font-alt
-	font-weight: bold
-	font-style: italic
+  font-family: $font-alt
+  font-weight: bold
+  font-style: italic
 
 // Base
 // ==========================================================================
@@ -73,53 +73,53 @@ $font-size-h1--sm: 3.0rem !default
 $line-height-h1--sm: round-float(4.2rem/$font-size-h1--sm, 2) !default
 // ----------------------------------------------------
 =font-h1()
-	font-size: $font-size-h1
-	line-height: $line-height-h1
+  font-size: $font-size-h1
+  line-height: $line-height-h1
 
-	+media('<tab-lg')
-		font-size: $font-size-h1--md
-		line-height: $line-height-h1--md
+  +media('<tab-lg')
+    font-size: $font-size-h1--md
+    line-height: $line-height-h1--md
 
-	+media('<mob-lg')
-		font-size: $font-size-h1--sm
-		line-height: $line-height-h1--sm
+  +media('<mob-lg')
+    font-size: $font-size-h1--sm
+    line-height: $line-height-h1--sm
 
 // Heading h2
 $font-size-h2: round-float($font-size-h1*3.6rem/4.8rem, 1) !default
 $line-height-h2: round-float(4.8rem/3.6rem, 2) !default
 // ----------------------------------------------------
 $font-size-h2--md: round-float($font-size-h1--md*0.84, 1) !default
-$line-height-h2--md: round-float(($line-height-h1--md*1.02),2) !default
+$line-height-h2--md: round-float(($line-height-h1--md*1.02), 2) !default
 // ----------------------------------------------------
 $font-size-h2--sm: round-float($font-size-h1--sm*0.87, 1) !default
-$line-height-h2--sm: round-float(($line-height-h1--sm*1.01),2) !default
+$line-height-h2--sm: round-float(($line-height-h1--sm*1.01), 2) !default
 // ----------------------------------------------------
 =font-h2()
-	font-size: $font-size-h2
-	line-height: $line-height-h2
+  font-size: $font-size-h2
+  line-height: $line-height-h2
 
-	+media('<tab-lg')
-		font-size: $font-size-h2--md
-		line-height: $line-height-h2--md
+  +media('<tab-lg')
+    font-size: $font-size-h2--md
+    line-height: $line-height-h2--md
 
-	+media('<mob-lg')
-		font-size: $font-size-h2--sm
-		line-height: $line-height-h2--sm
+  +media('<mob-lg')
+    font-size: $font-size-h2--sm
+    line-height: $line-height-h2--sm
 
 // Heading h3
 $font-size-h3: round-float($font-size-h1*2.4rem/4.8rem, 1) !default
 $line-height-h3: round-float(3.6rem/2.4rem, 2) !default
 // ----------------------------------------------------
 $font-size-h3--sm: round-float($font-size-h1--sm*0.73, 1) !default
-$line-height-h3--sm: round-float(($line-height-h1--sm*1.05),2) !default
+$line-height-h3--sm: round-float(($line-height-h1--sm*1.05), 2) !default
 // ----------------------------------------------------
 =font-h3()
-	font-size: $font-size-h3
-	line-height: $line-height-h3
+  font-size: $font-size-h3
+  line-height: $line-height-h3
 
-	+media('<mob-lg')
-		font-size: $font-size-h3--sm
-		line-height: $line-height-h3--sm
+  +media('<mob-lg')
+    font-size: $font-size-h3--sm
+    line-height: $line-height-h3--sm
 
 // Heading h4
 $font-size-h4: round-float($font-size-h1*1.8rem/4.8rem, 1) !default
@@ -178,22 +178,30 @@ $user-content: user-content !default
 // минимальная ширина сайта
 $page-layout-min: 320px !default
 // отступы для всего сайта
-$page-layout-space: 18px 20px !default // v h
+$page-layout-space: 18px 20px !default
+// v h
 // максимальная ширина сайта
 $page-layout-width: 1920px !default
 // минимальные отступы у текствого блока
-$text-layout-space: 50px 60px !default // v h
-$text-layout-space--md: 25px 30px !default // v h
-$text-layout-space--sm: 13px 15px !default // v h
-$text-layout-space--mob: 8px 10px !default // v h
+$text-layout-space: 50px 60px !default
+// v h
+$text-layout-space--md: 25px 30px !default
+// v h
+$text-layout-space--sm: 13px 15px !default
+// v h
+$text-layout-space--mob: 8px 10px !default
+// v h
 // максимальная ширина текстового блока
 $text-layout-width: 800px !default
 // максимальная ширина текстового блока выходящего за пределы текста
 $flood-layout-width: 1000px !default
 // отступы внутри блочных элементов
-$grid-space: 28px 30px !default // v h
-$grid-space--lg: 18px 20px !default // v h
-$grid-space--sm: 8px 10px !default // v h
+$grid-space: 28px 30px !default
+// v h
+$grid-space--lg: 18px 20px !default
+// v h
+$grid-space--sm: 8px 10px !default
+// v h
 // отступы в дефолтных списках
 $list-space: 30px
 
@@ -210,7 +218,8 @@ $aside-width: 160px !default
 
 // Footer
 // ==========================================================================
-$footer-grid-space: 30px 0 !default // v h
+$footer-grid-space: 30px 0 !default
+// v h
 
 
 // Buttons
@@ -253,24 +262,26 @@ $form-letter-spacing: null !default
 // @example Sass - Использование
 // @example css - Вывод CSS
 =inputs-font()
-	//+font-alt
-	font-family: inherit
-	font-size: $form-font-size
-	line-height: $form-line-height
-	@if $form-letter-spacing
-		letter-spacing: $form-letter-spacing
-	color: $form-text-color
+  //+font-alt
+  font-family: inherit
+  font-size: $form-font-size
+  line-height: $form-line-height
+  @if $form-letter-spacing
+    letter-spacing: $form-letter-spacing
+  color: $form-text-color
 
 =selects-font()
-	+inputs-font
+  +inputs-font
 
 //+media('<mob-lg')
 	font-size: 10px
 
 // Layout of forms
 $form-border-width: 1px !default
-$form-input-space-vt: floor(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // верхний паддинг округляем в нижнюю сторону
-$form-input-space-vb: ceil(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // нижний паддинг округляем в верхнюю сторону
+$form-input-space-vt: floor(($form-input-height - $form-line-height - $form-border-width*2)/2) !default
+// верхний паддинг округляем в нижнюю сторону
+$form-input-space-vb: ceil(($form-input-height - $form-line-height - $form-border-width*2)/2) !default
+// нижний паддинг округляем в верхнюю сторону
 $form-input-space-h: 18px !default
 $form-bottom-space: 3rem !default
 $form-bottom-space--mob: 2rem !default
@@ -278,10 +289,10 @@ $form-gap: 40px !default
 
 // Vertical spaces
 =forms-space()
-	margin: 0 0 $form-bottom-space
+  margin: 0 0 $form-bottom-space
 
-	+media('<mob-lg')
-		margin: 0 0 $form-bottom-space--mob
+  +media('<mob-lg')
+    margin: 0 0 $form-bottom-space--mob
 
 // Checkboxes
 // Radio Buttons
@@ -295,32 +306,32 @@ $multiple-item-space: 3px !default
 
 // Style Selection
 =selectSelection()
-	height: $form-input-height
-	width: 100%
-	padding: $form-input-space-vt $select-arrow-width $form-input-space-vb $form-input-space-h
-	background: $form-bg-color
-	border: #{$form-border-width} solid #{$form-border-color}
-	border-radius: 0
-	box-shadow: none
-	text-indent: 0
-	outline: none
+  height: $form-input-height
+  width: 100%
+  padding: $form-input-space-vt $select-arrow-width $form-input-space-vb $form-input-space-h
+  background: $form-bg-color
+  border: #{$form-border-width} solid #{$form-border-color}
+  border-radius: 0
+  box-shadow: none
+  text-indent: 0
+  outline: none
 
 // States
 =form-success()
-	color: $form-success-color
-	border-color: $form-success-color
+  color: $form-success-color
+  border-color: $form-success-color
 
 =form-error()
-	color: $form-error-color
-	border-color: $form-error-color
+  color: $form-error-color
+  border-color: $form-error-color
 
 =form-has-value()
-	color: blueviolet
-	border-color: blueviolet
+  color: blueviolet
+  border-color: blueviolet
 
 =form-on-focus()
-	//color: $form-border-focus-color
-	border-color: $form-border-color--focus
+  //color: $form-border-focus-color
+  border-color: $form-border-color--focus
 
 
 // Animation
