20190206 Изменил структуру sass файлов

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,20 +1,13 @@
-//======================================================//
-//Sass VENDORS//
-//======================================================//
-// @link https://github.com/eduardoboucas/include-media
 @import ../libs/include-media/dist/include-media
-
-//======================================================//
-//Sass UTILS//
-//======================================================//
 @import utils/variables
 @import utils/functions
 @import utils/mixins
 @import utils/placeholders
 
-/*======================================================*/
-/* FONTS
-/*======================================================*/
+///*======================================================*/
+///* FONTS
+///*======================================================*/
+//@import fonts/fonts
 
 /*======================================================*/
 /* NORMALIZE AND RESET
@@ -33,45 +26,32 @@
 @import base/nojs
 
 /*======================================================*/
+/* LAYOUT
+/*======================================================*/
+@import base/layout
+
+/*======================================================*/
 /* TYPOGRAPHY
 /*======================================================*/
 @import base/typography
 /* === BUTTON ===
 @import base/buttons
-/* === BUTTON end ===
 /* === FORM'S ELEMENTS ===
 @import forms/forms
-/* === FORM'S ELEMENTS end ===
 
 /*======================================================*/
 /* COMMON
 /*======================================================*/
-
-///*======================================================*/
-///*COMPONENTS*/
-///*======================================================*/
-@import components/components
+@import components/breadcrumbs
+@import components/user-form
+@import components/sliders-vendor
+@import components/images-slider
+@import components/doc-list
+@import components/feature-list
+@import components/user-options
 //@import components/bitrix-search
 
-/*======================================================*/
-/* PARTIALS
-/*======================================================*/
-@import base/layout
-
-/*======================================================*/
-/*POPUPS*/
-/*======================================================*/
-//@import components/shutter
-
-///*======================================================*/
-///*PAGES*/
-///*======================================================*/
-@import pages/home
-
-///*======================================================*/
-///*THEMES*/
-///*======================================================*/
-@import themes/theme
+@import components/components
 
 /*======================================================*/
 /* PRINT VERSION
