--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -341,4 +341,5 @@ $animation-speed-mouseleave: 0.35s !default
 
 // No custom list
 // ==========================================================================
+$no-custom-list-parent: null !default // parent elements of a list
 $no-custom-list: ':not(.reset-list):not(.no-custom):not(.breadcrumbs__list):not(.slick-dots)'
