--- a/src/sass/forms/_select2.sass
+++ b/src/sass/forms/_select2.sass
@@ -141,7 +141,7 @@
 .select2
   .select2-selection, .select2-selection__rendered, .select2-selection__placeholder
 
-    .input--has-value + &
+    .filled + &
       +form-has-value
 
     .success + &
@@ -150,7 +150,7 @@
     .error + &
       +form-error
 
-    .input--focus + &
+    .focused + &
       +form-on-focus
 
   .select2-search__field
