--- a/src/sass/components/_components.sass
+++ b/src/sass/components/_components.sass
@@ -15,14 +15,15 @@
 
 /* logo
 .logo
-  position: relative
   float: left
-  background: url(../../img/logo.png) no-repeat
-  width: 220px
-  height: 85px
-  text-indent: -9999px
+  position: relative
   overflow: hidden
+  width: 85px
+  height: 85px
   margin: 0 2rem 0 0
+  background: url(../../img/logo.svg) no-repeat
+  background-size: contain
+  text-indent: -9999px
   z-index: 5
 
   a, & > span
